--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,8 +13,6 @@ jobs:
 
       - name: Set up the docker build
         uses: docker/setup-buildx-action@v2
-        with:
-          version: v0.7.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -26,5 +24,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/shopifly:latest
