--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Set Up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          version: v0.7.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
