made terraform plan run on pull request and apply run on push

--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -4,6 +4,8 @@ defaults:
     working-directory: infra
 on:
   pull_request:
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -26,9 +28,11 @@ jobs:
         run: terraform init
 
       - name: Terraform Plan
+        if: ${{github.event_name=='pull_request'}}
         id: plan
         run: terraform plan  -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=CANDIDATE_EMAIL" -no-color
         continue-on-error: false
 
       - name: Terraform Apply
+        if: ${{github.event_name=='push'}}
         run: terraform apply -var="candidate_id=$CANDIDATE_ID" -var="candidate_email=$CANDIDATE_EMAIL"  -auto-approve
