--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -17,7 +17,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: eu-west-1
       CANDIDATE_ID: 1021
-      CANDIDATE_EMAIL: miko004@student.kristiania.no
+      CANDIDATE_EMAIL: miriamkosther@gmail.com
     steps:
       - uses: actions/checkout@v3
       - name: Setup Terraform
